--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  height: 50px;
+  padding: 0px 20px;
   display: flex;
-  flex-direction: column;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.hero-section{
+ padding: 20px;
+ display: flex;
+ flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero-section>img{
+  max-width: 800px;
+  align-self: center;  /* align itself in center of flex it is contained */
+}
+
+.hero-section>h1{
+  margin-bottom: 0px;
+  font-size: 3rem;
+}
+.hero-section>p1{
+  margin-left: 20%;
+  margin-top: 0px;
 }
