--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body{
 
 .card{
   position: relative;
-  margin: 20px;
+  padding: 20px;
   
 }
 
@@ -49,7 +49,7 @@ body{
 
 .sold-out-img {
   position: absolute;
-  left: 10px;
-  top: 10px;
+  left: 30px;
+  top: 30px;
   z-index: 0;
 }
