Added list of cards

--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,16 @@ body{
 .card{
   position: relative;
   padding: 20px;
+  width: 205px;
+  font-size: 12px;
   
 }
 
 .card-image{
   position: relative;
   z-index: -1;
+  height: 300px;
+  
 }
 
 .card>p{
@@ -52,4 +56,10 @@ body{
   left: 30px;
   top: 30px;
   z-index: 0;
+}
+
+.cards-list {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
 }
